@@ -1,0 +1,34 @@
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
+
+	<log4net>
+
+		<appender name="rollingFile" type="log4net.Appender.RollingFileAppender,log4net" >
+			
+			<param name="File" value="mr_log.txt" />
+			<param name="AppendToFile" value="true" />
+			<param name="RollingStyle" value="Size" />
+			<param name="MaximumFileSize" value="5mb" />
+ 			<!-- RollingStyle: Date (do not support rollbackups)
+			<param name="DatePattern" value="yyyy.MM.dd.HH.mm" />
+			-->
+			<param name="MaxSizeRollBackups" value="50" />
+			<param name="StaticLogFileName" value="true" />
+
+			<layout type="log4net.Layout.PatternLayout,log4net">
+				<param name="ConversionPattern" value="%d [%t] %-5p %c [%x] &lt;%X{auth}&gt; - %m%n" />
+			</layout>			
+		</appender>
+
+		<root>
+			<priority value="ERROR" />
+			<appender-ref ref="rollingFile" />
+		</root>
+
+		<logger name="Castle.MonoRail">
+			<level value="ALL" />
+		</logger>
+
+	</log4net>
+
+</configuration>
