@@ -5,6 +5,16 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
 	<monorail>
+		
+		<!--
+		<services>
+			<service 
+				id="Custom" 
+				interface="Castle.Core.Logging.ILoggerFactory, Castle.Core"
+				type="Castle.Services.Logging.Log4netIntegration.Log4netFactory, Castle.Services.Logging.Log4netIntegration" />
+		</services>
+		-->
+		
 		<controllers>
 			<assembly>TestSiteNVelocity</assembly>
 		</controllers>
